--- a/i18n/en_US.yaml
+++ b/i18n/en_US.yaml
@@ -327,9 +327,7 @@ backend:
       name:
         other: rude or abusive
       desc:
-        other:
-          A reasonable person would find this content inappropriate for respectful
-          discourse.
+        other: "A reasonable person would find this content inappropriate for respectful discourse."
     a_duplicate:
       name:
         other: a duplicate
@@ -341,10 +339,7 @@ backend:
       name:
         other: not an answer
       desc:
-        other:
-          This was posted as an answer, but it does not attempt to answer the
-          question. It should possibly be an edit, a comment, another question,
-          or deleted altogether.
+        other: "This was posted as an answer, but it does not attempt to answer the question. It should possibly be an edit, a comment, another question,or deleted altogether."
     no_longer_needed:
       name:
         other: no longer needed
@@ -403,9 +398,7 @@ backend:
         name:
           other: needs details or clarity
         desc:
-          other:
-            This question currently includes multiple questions in one. It should
-            focus on one problem only.
+          other: This question currently includes multiple questions in one. It should focus on one problem only.
       other:
         name:
           other: something else
